@@ -24,6 +24,8 @@ ubiquity (1.1.3) UNRELEASED; urgency=low
   * Make the rest of the summary text translatable.
   * Display grub-installer/install_to_xfs question if it's asked.
   * Fix get_filesystems() not to assume ext3 in quite so many situations.
+  * Detect XFS for validation purposes even when it wasn't just formatted by
+    gparted/qtparted (closes: Malone #53642).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Jul 2006 08:23:23 +0100
 
